# Isaac-Sim-MoveIt-ROS2-SO101-Arm-Motion-Planning

./: ARCHITECTURE.md  README.md
fireloop_assignment_1/fireloop_assignment/so-arm/so101_ws/src/so101_bringup/rviz/: so101.rviz
fireloop_assignment_1/fireloop_assignment/so-arm/so101_ws/src/so101_motion_planning/: package.xml  setup.cfg  setup.py
fireloop_assignment_1/fireloop_assignment/so-arm/so101_ws/src/so101_motion_planning/launch/: motion_planning_test.launch.py  pick_and_place_bringup.launch.py
fireloop_assignment_1/fireloop_assignment/so-arm/so101_ws/src/so101_motion_planning/so101_motion_planning/: motion_planning_node.py
fireloop_assignment_1/fireloop_assignment/so-arm/so101_ws/src/so101_moveit_config/config/: joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml  so101_new_calib.ros2_control.xacro  so101_new_calib.srdf
fireloop_assignment_1/fireloop_assignment/so-arm/so101_ws/src/so101_state_machine/: package.xml
fireloop_assignment_1/fireloop_assignment/so-arm/so101_ws/src/so101_state_machine/so101_state_machine/: bt_node.py  perception_node.py
